<resources>
    <string name="app_name">Calculadora 2 - LAM</string>
    <string name="title_activity_pilha">Calculadora de Pilha</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="calculadora">Calculadora</string>
    <string name="stack">Stack:</string>
    <string name="empilhar">Empilhar</string>
    <string name="desempilhar">Desempilhar</string>
    <string name="somar">+</string>
    <string name="sub">-</string>
    <string name="mult">*</string>
    <string name="div">/</string>
    <string name="limpar">Limpar</string>
    <string name="calculadora_de_pilha">Calculadora de Pilha</string>
    <string name="calculadora_de_fibonacci">Calculadora de Fibonacci</string>
</resources>